Diseño de busqueda de usuario y creacion de endpoints (1.2.4)
