# BACKEND/routes/routes.js
@@ -2,14 +2,12 @@ const express = require('express');
 const login = require('../src/controllers/login')
 const registrar = require('../src/controllers/registrar')
 const verifySession = require('../src/controllers/auth.js')
+const home = require('../src/controllers/home.js')
+
 let router = express.Router();
 router
     .route("/login")
     .post(login.login)
-
-router
-    .route("/loginG")
-    .post(login.signinWithGoogle)
 
 router
     .route("/logout")
@@ -22,5 +20,13 @@ router
 router
     .route("/registrar")
     .post(registrar.registrar)
+
+router
+    .route("/registrarToDb")
+    .post(registrar.registrarToDb)
+
+router
+    .route("/search")
+    .post(home.search)
 
 module.exports = router;
